--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ gTTS-token==1.1.3
 gunicorn==20.0.4
 idna==2.10
 MouseInfo==0.1.3
-pickle
+pickle-mixin
 Pillow==8.0.0
 playsound==1.2.2
 psycopg2==2.8.6
@@ -32,7 +32,7 @@ requests==2.24.0
 ruamel.yaml==0.16.12
 ruamel.yaml.clib==0.2.2
 selenium
-smtplib
+secure-smtplib
 ssl
 six==1.15.0
 soupsieve==2.0.1
