--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ idna==2.10
 MouseInfo==0.1.3
 pickle-mixin
 Pillow==8.0.0
-playsound==1.2.2
+playsound
 psycopg2==2.8.6
 PyAutoGUI==0.9.52
 PyGetWindow==0.0.9
