--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-pip
 asgiref==3.2.10
 beautifulsoup4==4.9.3
 bs4==0.0.1
@@ -36,6 +35,7 @@ secure-smtplib
 six==1.15.0
 soupsieve==2.0.1
 sqlparse==0.4.1
+speech_recognition
 twilio
 urllib3==1.25.11
 vext==0.7.4
