--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ secure-smtplib
 six==1.15.0
 soupsieve==2.0.1
 sqlparse
-speech_recognition
+SpeechRecognition
 twilio
 urllib3==1.25.11
 vext==0.7.4
